raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
// Vector3 type
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
// Matrix type (OpenGL style 4x4 - right handed, column major)
typedef struct Matrix
{
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
// Vertex data definning a mesh
// NOTE: Data stored in CPU memory (and GPU)
typedef struct Mesh
{
    int vertexCount;   // Number of vertices stored in arrays
    int triangleCount; // Number of triangles stored (indexed or not)

    // Default vertex data
    float *vertices;         // Vertex position (XYZ - 3 components per vertex) (shader-location = 0)
    float *texcoords;        // Vertex texture coordinates (UV - 2 components per vertex) (shader-location = 1)
    float *texcoords2;       // Vertex second texture coordinates (useful for lightmaps) (shader-location = 5)
    float *normals;          // Vertex normals (XYZ - 3 components per vertex) (shader-location = 2)
    float *tangents;         // Vertex tangents (XYZW - 4 components per vertex) (shader-location = 4)
    unsigned char *colors;   // Vertex colors (RGBA - 4 components per vertex) (shader-location = 3)
    unsigned short *indices; // Vertex indices (in case vertex data comes indexed)

    // Animation vertex data
    float *baseVertices; // Vertex base position (required to apply bones transformations)
    float *baseNormals;  // Vertex base normals (required to apply bones transformations)
    float *weightBias;   // Vertex weight bias
    int *weightId;       // Vertex weight id

    // OpenGL identifiers
    unsigned int vaoId;    // OpenGL Vertex Array Object id
    unsigned int vboId[7]; // OpenGL Vertex Buffer Objects id (default vertex data)
} Mesh;
// Shader type (generic)
typedef struct Shader
{
    unsigned int id;                // Shader program id
    int locs[MAX_SHADER_LOCATIONS]; // Shader locations array
} Shader;
// Material texture map
typedef struct MaterialMap
{
    Texture2D texture; // Material map texture
    Color color;       // Material map color
    float value;       // Material map value
} MaterialMap;
// Material type (generic)
typedef struct Material
{
    Shader shader;                       // Material shader
    MaterialMap maps[MAX_MATERIAL_MAPS]; // Material maps
    float *params;                       // Material generic parameters (if required)
} Material;
// Model type
typedef struct Model
{
    Mesh mesh;         // Vertex data buffers (RAM and VRAM)
    Matrix transform;  // Local transform matrix
    Material material; // Shader and textures data
} Model;
// Ray type (useful for raycast)
typedef struct Ray
{
    Vector3 position;  // Ray position (origin)
    Vector3 direction; // Ray direction
} Ray;
// Raycast hit information
typedef struct RayHitInfo
{
    bool hit;         // Did the ray hit something?
    float distance;   // Distance to nearest hit
    Vector3 position; // Position of nearest hit
    Vector3 normal;   // Surface normal of hit
} RayHitInfo;
// Wave type, defines audio wave data
typedef struct Wave
{
    unsigned int sampleCount; // Number of samples
    unsigned int sampleRate;  // Frequency (samples per second)
    unsigned int sampleSize;  // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
    unsigned int channels;    // Number of channels (1-mono, 2-stereo)
    void *data;               // Buffer data pointer
} Wave;
// Sound source type
typedef struct Sound
{
    void *audioBuffer; // Pointer to internal data used by the audio system

    unsigned int source; // Audio source id
    unsigned int buffer; // Audio buffer id
    int format;          // Audio format specifier
} Sound;
// Music type (file streaming from memory)
// NOTE: Anything longer than ~10 seconds should be streamed
typedef struct MusicData *Music;
// Audio stream type
// NOTE: Useful to create custom audio streams not bound to a specific file
typedef struct AudioStream
{
    unsigned int sampleRate; // Frequency (samples per second)
    unsigned int sampleSize; // Bit depth (bits per sample): 8, 16, 32 (24 not supported)
    unsigned int channels;   // Number of channels (1-mono, 2-stereo)

    void *audioBuffer; // Pointer to internal data used by the audio system.

    int format;              // Audio format specifier
    unsigned int source;     // Audio source id
    unsigned int buffers[2]; // Audio buffers (double buffering)
} AudioStream;
// Head-Mounted-Display device parameters
typedef struct VrDeviceInfo
{
    int hResolution;               // HMD horizontal resolution in pixels
    int vResolution;               // HMD vertical resolution in pixels
    float hScreenSize;             // HMD horizontal size in meters
    float vScreenSize;             // HMD vertical size in meters
    float vScreenCenter;           // HMD screen center in meters
    float eyeToScreenDistance;     // HMD distance between eye and display in meters
    float lensSeparationDistance;  // HMD lens separation distance in meters
    float interpupillaryDistance;  // HMD IPD (distance between pupils) in meters
    float lensDistortionValues[4]; // HMD lens distortion constant parameters
    float chromaAbCorrection[4];   // HMD chromatic aberration correction parameters
} VrDeviceInfo;